--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
             font-family: 'Arabic Typesetting', serif;
             font-weight: normal;
         }
-        /* Hijri Calendar */
         .hijri-calendar {
             background: #fafdff;
             border-radius: 8px;
@@ -240,13 +239,18 @@
         <p>حقوق النشر © 2025 منصة فزارة التعليمية. د. محمد محمود الفيومي</p>
     </footer>
     <script>
-    // تحويل التاريخ الميلادي إلى هجري (تقريبية)
+    // جلب التاريخ الهجري الرسمي لمصر (يدوي حسب ما تعلنه دار الإفتاء)
+    // يمكنك تحديث هذا النص يومياً ليطابق إعلان دار الإفتاء المصرية
+    document.getElementById('hijri-date').innerText = '٧ ذو الحجة ١٤٤٦ هـ';
+    document.getElementById('greg-day').innerText = 'اليوم: الثلاثاء';
+
+    // إذا أردت التحويل التلقائي البرمجي، استخدم الكود التالي بدلاً من السابق (لكن لن يكون مطابقاً للرؤية الشرعية دائماً):
+    /*
     function toHijri(gYear, gMonth, gDay) {
         let jd = Math.floor((1461 * (gYear + 4800 + Math.floor((gMonth - 14) / 12))) / 4) +
             Math.floor((367 * (gMonth - 2 - 12 * (Math.floor((gMonth - 14) / 12)))) / 12) -
             Math.floor((3 * Math.floor(((gYear + 4900 + Math.floor((gMonth - 14) / 12)) / 100))) / 4) +
             gDay - 32075;
-
         let l = jd - 1948440 + 10632;
         let n = Math.floor((l - 1) / 10631);
         l = l - 10631 * n + 354;
@@ -263,7 +267,6 @@
         let hijriYear = 30 * n + j - 30;
         return [hijriYear, hijriMonth, hijriDay];
     }
-
     function getHijriDate() {
         const today = new Date();
         const days = ['الأحد','الاثنين','الثلاثاء','الأربعاء','الخميس','الجمعة','السبت'];
@@ -275,6 +278,7 @@
         document.getElementById('greg-day').innerText = `اليوم: ${gregDay}`;
     }
     getHijriDate();
+    */
     </script>
 </body>
 </html>
