--- a/aqeedah.html
+++ b/aqeedah.html
@@ -19,7 +19,7 @@
         .track-list {background: #fafdff; border: 2px solid #8fd6fb; border-radius: 16px; box-shadow: 0 2px 16px #8fd6fb12; padding: 28px 36px 22px 36px; width: 340px; min-width: 220px;}
         .track-title {color: #4fa3d1; font-size: 1.25em; font-weight: 700; margin-bottom: 16px; text-align: center;}
         .track-list ul {list-style: disc inside; color: #23425a; padding: 0 0 0 12px; margin: 0 0 12px 0; font-size: 1.08em; line-height: 2;}
-        .track-btn {display: block; width: 100%; background: linear-gradient(90deg, #4fa3d1 80%, #8fd6fb); color: #fff; border: none; border-radius: 7px; font-size: 1.08em; font-weight: 700; padding: 12px 0; margin: 10px 0 0 0; cursor: pointer; transition: background 0.2s, box-shadow 0.2s; text-align: center; box-shadow: 0 1px 5px #8fd6fb22; text-decoration: none;}
+        .track-btn {display: block; width: 100%; background: linear-gradient(90deg, #4fa3d1 80%, #8fd6fb); color: #fff; border: none; border-radius: 7px; font-size: 1.08em; font-weight: 700; padding: 12px 0; margin-top: 10px; transition: background 0.2s;}
         .track-btn:hover {background: linear-gradient(90deg, #8fd6fb 30%, #4fa3d1);}
         .footer {background: #8fd6fb; color: #23425a; text-align: center; padding: 18px; border-radius: 16px 16px 0 0; margin-top: 40px;}
         @media (max-width: 900px) {.tracks-container {flex-direction: column; gap: 24px;} .track-list {width: 95%; padding: 20px 10px 14px 10px;}}
@@ -68,7 +68,7 @@
         </div>
     </div>
     <footer class="footer">
-        <p>حقوق النشر © 2025 منصة فزارة التعليمية. د. محمد محمود الفيومي</p>
+        <p>حقوق النشر © 2025 منصة فزارة التعليمية. د.محمد محمود الفيومي</p>
     </footer>
 </body>
 </html>
