--- a/index.html
+++ b/index.html
@@ -252,18 +252,26 @@
                 </div>
             </a>
             <div class="section" id="hadith">
+                <a href="hadith.html" style="text-decoration:none;color:inherit;">
+                <div class="section" id="fiqh" style="cursor:pointer;">
                 <h2>قسم الحديث وعلومه</h2>
                 <p>محتوى قسم الحديث وعلومه...</p>
             </div>
             <div class="section" id="aqeedah">
+                <a href="aqeedah.html" style="text-decoration:none;color:inherit;">
+                <div class="section" id="fiqh" style="cursor:pointer;">
                 <h2>قسم العقيدة</h2>
                 <p>محتوى قسم العقيدة...</p>
             </div>
             <div class="section" id="lataif">
+                <a href="lataif.html" style="text-decoration:none;color:inherit;">
+                <div class="section" id="fiqh" style="cursor:pointer;">
                 <h2>قسم اللطائف</h2>
                 <p>محتوى قسم اللطائف...</p>
             </div>
             <div class="section" id="questions">
+                <a href="questions.html" style="text-decoration:none;color:inherit;">
+                <div class="section" id="fiqh" style="cursor:pointer;">
                 <h2>قسم السيرة النبوية</h2>
                 <p>محتوى قسم السيرة...</p>
             </div>
