--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </div>
     </header>
     <div class="main-container">
-        <h1>أهل فزارة الكرام شبابها وبناتها ورجالها وفتيانها ...السلام عليكم ورحمة الله وبركاته</h1>
+        <h1>أهل فزارة الكرام شبابها وبناتها ورجالها وفتيانها ...السلام عليكم ورحمة الله وبركاته☺️</h1>
         <div class="sub-message">
             يا غوالي...هدفنا أن نتعلم ما لا يسع المسلم جهله بمسارات مختلفة متناسبة مع أعماركم، وربنا الرحمن المستعان
         </div>
