--- a/register.html
+++ b/register.html
@@ -111,7 +111,7 @@
 <body>
 <div class="auth-container">
     <h2>إنشاء حساب جديد</h2>
-    <form method="POST" action="php/register-process.php" autocomplete="off">
+    <form method="POST" action="php/register-handler.php" autocomplete="off">
         <label>الاسم الأول:</label>
         <input type="text" name="first_name" required>
         <label>الاسم الأخير:</label>
